tests/derive_ui/skip_with_other_options.stderr
error: methods are not allowed for skipped fields
 --> tests/derive_ui/skip_with_other_options.rs:8:11
  |
8 |     #[arg(skip, long)]
  |           ^^^^
